hcp: host cryptographic provisioning (swtpm)
Add the "swtpm" implementation.

Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/Makefile
+++ b/hcp/Makefile
@@ -45,6 +45,9 @@ include hcp/enrollsvc/Makefile
 # Attestation Service
 include hcp/attestsvc/Makefile
 
+# Software TPM
+include hcp/swtpm/Makefile
+
 # This target allows you to shell into a running container (using docker exec).
 # If CID is set, it attempts to shell into the container it identifies,
 # otherwise a listing of running containers is given.
