hcp/run: fix DTAG handling
Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/Makefile
+++ b/hcp/Makefile
@@ -137,6 +137,7 @@ $(HCP_RUN_TOP): | $(HCP_OUT)
 clean_hcp: clean_hcp_run
 HCP_RUN_ASSIST_CLEANUP := $(ASSIST_CLEANUP)
 HCP_RUN_DSPACE := $(SAFEBOOT_HCP_DSPACE)
+HCP_RUN_DTAG := $(SAFEBOOT_HCP_DTAG)
 HCP_RUN_DNETWORKS := $(HCP_TESTNETWORK_NAME)
 HCP_RUN_UTIL_IMAGE := $(SAFEBOOT_HCP_BASE)
 HCP_RUN_SETTINGS := $(HCP_SRC)/run/direct.mk
