hcp: tidy-up run-time interface, and fix caboodle
Rather than the caller (of docker-run) setting SIGNING_KEY_{PRIV,PUB} and
ENROLL_SIGN_ANCHOR, pass in the corresponding cred directories as
HCP_RUN_ENROLL_SIGNER and HCP_RUN_CLIENT_VERIFIER, respectively.

hcp_caboodle had become out of date and so this patch also restores it to
a working state.

Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/run/Makefile
+++ b/hcp/run/Makefile
@@ -417,8 +417,7 @@ HCP_RUN_ENROLL_MOUNT_mgmt := :rw
 HCP_RUN_ENROLL_MOUNT_repl := :ro
 HCP_RUN_ENROLL_ARGS := --env HCP_ENROLLSVC_STATE_PREFIX="$(HCP_RUN_ENROLL_MOUNT)"
 HCP_RUN_ENROLL_ARGS += -v $(HCP_RUN_ENROLL_SIGNER):/signer
-HCP_RUN_ENROLL_ARGS += --env SIGNING_KEY_PRIV=/signer/key.priv
-HCP_RUN_ENROLL_ARGS += --env SIGNING_KEY_PUB=/signer/key.pem
+HCP_RUN_ENROLL_ARGS += --env HCP_RUN_ENROLL_SIGNER="/signer"
 HCP_RUN_ENROLL_ARGS += --env HCP_RUN_ENROLL_UWSGI="$(HCP_RUN_ENROLL_UWSGI)"
 HCP_RUN_ENROLL_ARGS += --env HCP_RUN_ENROLL_UWSGI_PORT="$(HCP_RUN_ENROLL_UWSGI_PORT)"
 HCP_RUN_ENROLL_ARGS += --env HCP_RUN_ENROLL_UWSGI_FLAGS="$(HCP_RUN_ENROLL_UWSGI_FLAGS)"
@@ -464,10 +463,10 @@ $(eval $(call hcp_run_create,HCP_RUN_SWTPM))
 HCP_RUN_CLIENT_NAME := client
 HCP_RUN_CLIENT_CMD_INIT :=
 HCP_RUN_CLIENT_CMD := /hcp/client/run_client.sh
-HCP_RUN_CLIENT_ARGS := --env TPM2TOOLS_TCTI="$(HCP_RUN_CLIENT_TPM2TOOLS_TCTI)"
+HCP_RUN_CLIENT_ARGS := -v $(HCP_RUN_CLIENT_VERIFIER):/verifier
+HCP_RUN_CLIENT_ARGS += --env HCP_RUN_CLIENT_VERIFIER=/verifier
+HCP_RUN_CLIENT_ARGS += --env TPM2TOOLS_TCTI="$(HCP_RUN_CLIENT_TPM2TOOLS_TCTI)"
 HCP_RUN_CLIENT_ARGS += --env HCP_CLIENT_ATTEST_URL="$(HCP_RUN_CLIENT_ATTEST_URL)"
-HCP_RUN_CLIENT_ARGS += -v $(HCP_RUN_CLIENT_VERIFIER):/verifier
-HCP_RUN_CLIENT_ARGS += --env ENROLL_SIGN_ANCHOR=/verifier/key.pem
 HCP_RUN_CLIENT_ARGS += -v $(shell pwd):/escapehatch
 $(eval $(call hcp_run_create,HCP_RUN_CLIENT))
 
