hcp: fix propagation of TPM2TOOLS_TCTI
Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/run/Makefile
+++ b/hcp/run/Makefile
@@ -465,7 +465,7 @@ HCP_RUN_CLIENT_CMD_INIT :=
 HCP_RUN_CLIENT_CMD := /hcp/client/run_client.sh
 HCP_RUN_CLIENT_ARGS := -v $(HCP_RUN_CLIENT_VERIFIER):/verifier
 HCP_RUN_CLIENT_ARGS += --env HCP_RUN_CLIENT_VERIFIER=/verifier
-HCP_RUN_CLIENT_ARGS += --env TPM2TOOLS_TCTI="$(HCP_RUN_CLIENT_TPM2TOOLS_TCTI)"
+HCP_RUN_CLIENT_ARGS += --env HCP_RUN_CLIENT_TPM2TOOLS_TCTI="$(HCP_RUN_CLIENT_TPM2TOOLS_TCTI)"
 HCP_RUN_CLIENT_ARGS += --env HCP_CLIENT_ATTEST_URL="$(HCP_RUN_CLIENT_ATTEST_URL)"
 HCP_RUN_CLIENT_ARGS += -v $(shell pwd):/escapehatch
 $(eval $(call hcp_run_create,HCP_RUN_CLIENT))
