hcp: label containers, not container images
Labels are used to "find" containers corresponding to an instance of
interest. If they are baked into images at build-time they lose their
uselessness if the images are tagged with different prefix/suffix naming
as a way of distinguishing instances. Instead, we defer all labels to
run-time, ensuring they are assigned according to the intended
instance/naming.

Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/base/Makefile
+++ b/hcp/base/Makefile
@@ -59,8 +59,7 @@ $(HCP_BASE_OUT)/0import.Dockerfile:
 $(HCP_BASE_OUT)/0import.built: $(HCP_BASE_OUT)/0import.Dockerfile
 $(HCP_BASE_OUT)/0import.built:
 	$Qcat $(HCP_BASE_OUT)/0import.Dockerfile | \
-		docker build -t $(HCP_BASE0_DNAME) \
-			--label $(SAFEBOOT_HCP_DSPACE)all=1 -
+		docker build -t $(HCP_BASE0_DNAME) -
 	$Qtouch $@
 
 # LAYER: 1apt-source
