hcp/run: add missing clean_hcp_run dependency
The "clean_hcp_run" should be a superset of "<svc>_clean" targets, but
there was a missing dependency to ensure this.

Signed-off-by: Geoff Thorpe <geoffrey@twosigma.com>

--- a/hcp/run/Makefile
+++ b/hcp/run/Makefile
@@ -450,6 +450,9 @@ $(name)_init: $(initTgt)
 $(if $(started),$(if $(FORCE),\
 $(name)_clean: $(name)_stop
 ))
+$(if $(initDone),\
+clean_hcp_run: $(name)_clean
+)
 $(name)_clean:
 	$(if $(started),$(if $(FORCE),,\
 		$Qecho "Error, the '$(name)' service is running. Stop it before cleaning."
